--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					</p>
 					<p>My research interests lie broadly in Human-Computer Interaction (HCI) and Human-centered AI.
 						I am interested in designing, building, and studying technologies that empower end-users. 
-						In my current research, I designed and built a <a href="./notimanager.html" target="_blank">notification management system</a> and used mixed-methods to study users' experiences with this system. 
+						In my current research, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> and used mixed-methods to study users' experiences with this system. 
 						It was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively handle notifications through automated functions, while also providing them with manual functions to adjust these automations. 
 						My goal is to support people in using technology as a helpful tool that enhances their lives, rather than as something that causes negative impacts or harm.
 						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
@@ -118,7 +118,7 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Dec 26,<br>2023</th>
 								<td>
-									<a href="./notimanager.html" target="_blank">Project site</a> for my research application, NotiManager, is now live! 🚀 
+									<a href="./notimanager" target="_blank">Project site</a> for my research application, NotiManager, is now live! 🚀 
 								</td>
 							</tr>
 							<tr>
@@ -193,7 +193,7 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;margin-bottom:1.1em;border-color:#AAAAAA>
 					<!--<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>-->
-					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager.html" target="_blank"><span style="color: #035772;">Notification System with Automatic and Manual Management Features</span></a></h4>
+					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager" target="_blank"><span style="color: #035772;">Notification System with Automatic and Manual Management Features</span></a></h4>
 					<div class="row">
 						<ul>
 							
