--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
 					</p>
 					<p>My research interests lie broadly in Human-Computer Interaction (HCI) and Human-centered AI.
 						I am interested in designing, building, and studying technologies that empower end-users. 
-						In my previous research, I designed and built a <a href="./notimanager" target="_blank">notification management system</a>, and used mixed-methods to study users' experiences with this system. 
-						It was built to facilitate users' workflows in reading and acting on notifications, helping them efficiently and effectively handle notifications through automated functions, while also providing them with manual functions to adjust these automations. 
-						My goal is to empower people to be able to use technology as a helpful tool that enhances their lives, rather than as something that negatively impacts their well-being.
+						In my previous research, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in handling notifications. 
+						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
+						Then, I used mixed-methods to study users' experiences with this system. 
+						My goal is to empower people to be able to use technology as a helpful tool that enhances their lives, enabling them to maintain control over its use and avoid negative impacts on their well-being.
 						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
 					</p>
 					<p>
@@ -193,7 +194,7 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;margin-bottom:1.1em;border-color:#AAAAAA>
 					<!--<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>-->
-					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager" target="_blank"><span style="color: #035772;">Notification System with Automatic and Manual Management Features</span></a></h4>
+					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager" target="_blank"><span style="color: #035772;">Supporting Notification Management</span></a></h4>
 					<div class="row">
 						<ul>
 							
