--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;margin-bottom:1.1em;border-color:#AAAAAA>
 					<!--<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>-->
-					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager" target="_blank"><span style="color: #035772;">Supporting Notification Management</span></a></h4>
+					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager" target="_blank"><span style="color: #035772;">Supporting Smartphone Users in Managing Notifications</span></a></h4>
 					<div class="row">
 						<ul>
 							
