--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 					</p>
 					<p>My research interests lie broadly in Human-Computer Interaction (HCI) and Human-centered AI.
 						I am interested in designing, building, and studying technologies that empower end-users. 
-						In my previous research, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in handling notifications. 
+						My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.
+						In my recent work, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in handling notifications. 
 						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
-						Then, I used mixed-methods to study users' experiences with this system. 
-						My goal is to empower people to be able to use technology as a helpful tool that enhances their lives, enabling them to maintain control over its use and avoid negative impacts on their well-being.
+						I also studied users' experiences with this system by using mixed-methods. 
 						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
 					</p>
 					<p>
@@ -90,7 +90,7 @@
 					</p>-->
 					<p>
 						
-						If you find any information interesting on my website (not limited to research), welcome to reach out! 
+						If you find anything interesting on my website, welcome to reach out! 
 						I am always happy to connect, chat, and collaborate with others. 
 						📩: <a href="mailto:yon9hanlin@gmail.com" target="_blank">yon9hanlin [at] gmail [dot] com </a>
 						
