--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 			<section id="about">
 				<header class="major">
 		
-					<p>Hi, I am Yong-Han Lin, you can call me Joanne or in Chinese: 林詠涵. I am currently a research assistant located in Taiwan,
+					<p>Hi, I am Yong-Han, you can call me Joanne or in Chinese: 林詠涵. I am currently a research assistant located in Taiwan,
 						being mentored by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile and Ubiquitous Interaction Lab.
-						I received the degree of B.S. in Computer Science in the summer of 2022 from the <a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University). 
+						I received the degree of B.S. in computer science in the summer of 2022 from the <a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University). 
 						
 					</p>
-					<p>My research interests lie broadly in Human-Computer Interaction (HCI) and Human-centered AI.
+					<p>My research interests lie broadly in human-computer interaction (HCI) and human-centered AI.
 						I am interested in designing, building, and studying technologies that empower end-users. 
 						My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.
 						In my recent work, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in handling notifications. 
