--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<section id="about">
 				<header class="major">
 		
-					<p>Hi, I am Yong-Han, you can call me Joanne or in Chinese: 林詠涵. I am currently a research assistant located in Taiwan,
+					<p>Hi, I am Yong-Han, you can call me Joanne or 林詠涵. I am currently a research assistant located in Taiwan,
 						being mentored by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile and Ubiquitous Interaction Lab.
 						I received the degree of B.S. in computer science in the summer of 2022 from the <a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University). 
 						
