--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				<div class="image avatar"><img src="images/avatar_new.jpg" alt="A girl enjoying a beautiful day and smiling at Malibu Beach." /></div>
 				<div id="main_name">Yong-Han Lin</div>
 				<div id="self_intro">
-					<div><i class="fas fa-map-pin" aria-hidden="true"></i> Hsinchu, Taiwan (GMT+8)</div>
+					<!--<div><i class="fas fa-map-pin" aria-hidden="true"></i> Hsinchu, Taiwan (GMT+8)</div>-->
+					<div><i class="fas fa-map-marker-alt"></i> Hsinchu, Taiwan (GMT+8)</div>
 					<!--<div>Undergraduate Researcher in MUI Lab at NYCU</div>
 					<div>EX-Research Intern in HCD Lab at Polytechnique Montréal</div>
 					<div>EX-Software Engineering Intern at Tech Startup</div>-->
@@ -67,14 +68,14 @@
 		
 					<p>
 						Hi, I am Yong-Han Lin 林詠涵, you can also call me Joanne. I am currently a research assistant located in Taiwan,
-						being mentored by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the Mobile and Ubiquitous Interaction Lab.
-						I received the degree of B.S. in computer science in the summer of 2022 from the <a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University). 
+						being mentored by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a> at the <img class="logo" src="images/NotiManager/lab_logo.jpg">Mobile and Ubiquitous Interaction Lab.
+						I received the degree of B.S. in computer science in the summer of 2022 from the <img class="logo" src="images/nycu_logo.png"><a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University). 
 					</p>
 					<p>
 						My research interests lie broadly in human-computer interaction (HCI) and human-centered AI.
 						I am interested in designing, building, and studying technologies that empower end-users. 
 						My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.
-						In my recent work, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in handling notifications. 
+						In my recent work, I designed and built a <img class="logo" src="images/notimanager_logo.jpg"><a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in handling notifications. 
 						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
 						I also studied users' experiences with this system by using mixed-methods. 
 						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
@@ -200,7 +201,7 @@
 				<h5>(* indicates equal contribution)</h5>
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;margin-bottom:1.1em;border-color:#AAAAAA>
 					<!--<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>-->
-					<h4><span style="font-weight: 600;">✨Main Research:</span> <a href="./notimanager" target="_blank"><span style="color: #035772;">Supporting Smartphone Users in Managing Notifications</span></a></h4>
+					<h4><span style="font-weight: 600;">🔬Main Research:</span> <a href="./notimanager" target="_blank"><span style="color: #035772;">Supporting Smartphone Users in Managing Notifications</span></a></h4>
 					<div class="row">
 						<ul>
 							
@@ -294,7 +295,7 @@
 								<a href="./more_about_me/index.html#other" target="_blank">doing something cool</a>
 							</li>
 							<li>
-								playing Mario Kart 🚦 🎮 🏁
+								playing Mario Kart 🚦
 							</li>
 						</ul>
 					</div>
