take off location

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 				<div class="image avatar"><img src="images/avatar_new.jpg" alt="A girl enjoying a beautiful day and smiling at Malibu Beach." /></div>
 				<div id="main_name">Yong-Han Lin</div>
 				<div id="self_intro">
-					<!--<div><i class="fas fa-map-pin" aria-hidden="true"></i> Hsinchu, Taiwan (GMT+8)</div>-->
-					<div><i class="fas fa-map-marker-alt"></i> Hsinchu, Taiwan (GMT+8)</div>
+					<!--<div><i class="fas fa-map-marker-alt"></i> Hsinchu, Taiwan (GMT+8)/div>-->
+					
 					<!--<div>Undergraduate Researcher in MUI Lab at NYCU</div>
 					<div>EX-Research Intern in HCD Lab at Polytechnique Montréal</div>
 					<div>EX-Software Engineering Intern at Tech Startup</div>-->
@@ -371,7 +371,8 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; 2024 Yong-Han Lin. Last updated: May 28, 2024.</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+					<li>&copy; 2024 Yong-Han Lin. Last updated: May 28, 2024. </li>
+					<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
