modify back to top button

--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@
 				</div>
 			</section>-->
 			<div class="scroll-container">
-				<a href="#top">🔝</a>
+				<!--<a href="#top">🔝</a>-->
+				<a href="#top" style="text-align:center; border-bottom:none;"><i class="fas fa-chevron-circle-up"></i><div style="font-size:12px; font-weight:600;">BACK TO TOP</div></span></a>
 			</div>
 			
 		</div>
