--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 				<div style=border:solid;padding:1em;border-width:1px;border-radius:20px;margin-bottom:1.1em;border-color:#AAAAAA>
 					<!--<h4><span style="font-weight: 600;">✨Main Research:</span> Notification Management - [<a><div class="tooltip" style="cursor: pointer; color: #035772;">Project Site<span class="tooltiptext">Soon to come...</span></div></a>]</h4>-->
 					<h4><span style="font-weight: 600;">
-					<i class="fas fa-thumbtack" style="padding:0 4px 0 0;font-size:17px;vertical-align: middle;"></i>Main Research:
+					<i class="fas fa-thumbtack" style="padding:0 4px 0 0;font-size:17px;vertical-align: middle;"></i>Main Research During Undergraduate:
 					</span> <a href="./notimanager" target="_blank"><span style="color: #035772;">Supporting Smartphone Users in Managing Notifications</span></a></h4>
 					<div class="row">
 						<ul>
@@ -250,7 +250,7 @@
 				
 				<div class="row">
 					<ul>
-						<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation" id="noti_alert" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">"I Want Lower Tone for Work-Related Notifications": Exploring the Effectiveness of User-Assigned Notification Alerts in Improving User Speculation of and Attendance to Mobile Notifications </span> 
+						<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation social_support" id="noti_alert" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">"I Want Lower Tone for Work-Related Notifications": Exploring the Effectiveness of User-Assigned Notification Alerts in Improving User Speculation of and Attendance to Mobile Notifications </span> 
 							
 							<!--<br>Tang-Jie Chang, Li-Ting Su, <u>Yong-Han Lin</u>, Jie Tsai, Zi-Xun Tang, Yung-Ju Chang--> 
 							<br><em>Under Review</em> 
