--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div>EX-Software Engineering Intern at Tech Startup</div>-->
 					
 					<ul class="actions">
-						<li><a href="#updates" class="button col-4 actions_button active" onclick="startAction(this)">Updates</a></li>
+						<li><a href="#updates" class="button col-4 actions_button active menu_a" onclick="startAction(this)">Updates</a></li>
 						<li><a href="#publications" class="button col-4 actions_button" onclick="startAction(this)">Publications</a></li>
 						<li><a href="#more" class="button col-4 actions_button" onclick="startAction(this)">More</a></li>
 						<!--<li><a href="#projects" class="button col-4">Projects</a></li>-->
@@ -407,7 +407,7 @@
 			<div class="inner">
 				<ul class="copyright">
 					<li>&copy; 2024 Yong-Han Lin. </li>
-					<li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.</li>
+					<li>Design: <a href="http://html5up.net" target="_blank" class="footer_button">HTML5 UP</a>.</li>
 				</ul>
 			</div>
 		</footer>
