--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 		<header id="header">
 			<div class="inner">
 				<div class="image avatar"><img src="images/avatar_new.jpg" alt="A girl enjoying a beautiful day and smiling at Malibu Beach." /></div>
-				<div id="main_name">Yong-Han Lin</div>
+				<div id="main_name">
+				Yong-Han Lin / 林詠涵
+				</div>
 				<div id="self_intro">
-					<div style="font-style: italic;">HCI Researcher</div>
+					<div style="font-style: italic;">I do HCI research.</div>
 					<!--<div><i class="fas fa-map-marker-alt"></i> Hsinchu, Taiwan (GMT+8)/div>-->
 					
 					<!--<div>Undergraduate Researcher in MUI Lab at NYCU</div>
