--- a/notimanager.html
+++ b/notimanager.html
@@ -231,7 +231,7 @@
 									</span></a> 
 									<br><span style="font-weight: 500;color: #483D88;">
 									<!--Yong-Han Lin,  Li-Ting Su, Uei-Dar Chen, Yi-Chi Lee, Peng-Jui Wang, Yung-Ju Chang (Under Review)-->
-									<em>Coming Soon...</em>
+									<em>Coming Soon at UbiComp/ISWC '24</em>
 									</span>
 							</div>  
 							<div id="hybrid" style="padding-top:30px;">
