--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 						<li><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a title="Mastodon" href="https://hci.social/@yonghan" target="_blank" class="icon brands fa-mastodon"><span class="label">Twitter</span></a></li>
 						<li><a title="Google Scholar" href="https://scholar.google.com.tw/citations?user=zrsqlLUAAAAJ&hl=zh-TW&authuser=2" target="_blank" class="icon brands"><i class="ai ai-google-scholar ai-lg"></i></a></li>
-						<li><a title="Github" href="https://github.com/yonghanlin" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<!--<li><a title="Github" href="https://github.com/yonghanlin" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>-->
 						<!--<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
-						<li><a title="CV" href="files/YongHan_Lin_CV.pdf" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
+						<!--<li><a title="CV" href="files/YongHan_Lin_CV.pdf" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>-->
 					</ul>
 				</div>
 			</div>
@@ -92,7 +92,7 @@
 						The other was in the Polytechnique Montréal Human-Centered Design Lab, where I was under the guidance of <a href="https://jhcheng.me/" target="_blank">Dr. Jinghui Cheng</a>.
 							 
 					</p>
-					<p>						
+					<p>	
 						If you find anything interesting on my website, welcome to reach out to me by email! 
 						I am always happy to connect, chat, and collaborate with others. 					
 					</p>
