--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
 								<br><em>To Appear at 2024 IMWUT (UbiComp)</em>
 								<br>
 								<span style="font-weight: 600;color: #035772;"><i class="fas fa-caret-square-down" style="padding:0 4px 0 0;font-size:17px;vertical-align: middle;"></i></span><a class="abs_trigger" id="abs_noti_evaluation" style="cursor: pointer;">Abstract</a>
-								<!--<span style="font-weight: 600;color: #035772;"><i class="fas fa-envelope" style="padding:0 4px 0 10px;font-size:19px;vertical-align: middle;"></i></span><a href="mailto:alberta.cs07@nycu.edu.tw" target="_blank">Request For Paper</a>-->
+								<span style="font-weight: 600;color: #035772;"><i class="fas fa-file-alt" style="padding:0 4px 0 10px;font-size:17px;vertical-align: middle;"></i></span>
+								<a href="files/NotiManager_Evaluation_IMWUT_2024.pdf" target="_blank">PDF</a>
 						   </div></li>
 							<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation trigger social_support" id="auto_manual" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management </span> 
 								<br>
@@ -228,7 +229,7 @@
 							<span style="font-weight: 600;color: #035772;"><i class="fas fa-caret-square-down" style="padding:0 4px 0 0;font-size:17px;vertical-align: middle;"></i></span>
 							<a class="abs_trigger" id="abs_noti_alert" style="cursor: pointer;">Abstract</a>
 							<span style="font-weight: 600;color: #035772;"><i class="fas fa-file-alt" style="padding:0 4px 0 10px;font-size:17px;vertical-align: middle;"></i></span>
-							<a href="files/Alert_Assistance_MobileHCI_2024_cameraready.pdf" target="_blank">PDF</a>
+							<a href="files/Alert_Assistance_MobileHCI_2024.pdf" target="_blank">PDF</a>
 						</div></li>
 						<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices" id="multi_device" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Multiple Device Users' Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions: An ESM Study Addressing the Usage Gap and Impacts of Device Context </span> 
 							<br>Fang-Ching Tseng, ​Zih-Yun Chiou, Ho-Hsuan Chuang,  Li-Ting Su, <u>Yong-Han Lin</u>, Yu-Rou Lin, Yi-Chi Lee, Peng-Jui Wang, Uei-Dar Chen, Yung-Ju Chang 
