--- a/index.html
+++ b/index.html
@@ -274,10 +274,7 @@
 					<div class="row">
 						<ul>
 							<li>
-								<a href="./more_about_me/index.html#travel" target="_blank">travel and photographing</a>
-							</li>
-							<li>
-								<a href="./more_about_me/index.html#music" target="_blank">music and playing music</a> 
+								music and art
 							</li>
 							<!--<li>
 								<a href="./more_about_me/index.html#reading" target="_blank">reading and writing</a>
@@ -285,6 +282,9 @@
 							<!--<li>
 								<a href="./more_about_me/index.html#other" target="_blank">trying something cool</a>
 							</li>-->
+							<li>
+								traveling and exploring Google Maps to find interesting places or good food  
+							</li>
 							<li>
 								playing Mario Kart 🚦
 							</li>
