--- a/index.html
+++ b/index.html
@@ -109,29 +109,36 @@
 					<table class="table">
 						<tbody>
 							<tr>
+								<th scope="row" style="width: 80px;">Oct 8,<br>2024</th>
+								<td>
+									Attended <a href="https://www.ubicomp.org/ubicomp-iswc-2024/" target="_blank">UbiComp/ISWC 2024</a> to present paper <a href="./files/NotiManager_Evaluation_IMWUT_2024" target="_blank">Pinning, Sorting, and Categorizing Notifications: A Mixed-methods Usage and Experience Study of Mobile Notification-management Features</a>!
+									Explore the <a href="./notimanager" target="_blank">project site</a> for an overview of NotiManager, the application developed for this research!
+								</td>
+							</tr>
+							<tr>
 								<th scope="row" style="width: 80px;">Jul 2,<br>2024</th>
 								<td>
-									One paper on the evaluation of <a href="./notimanager" target="_blank">NotiManager</a> is accepted to IMWUT (UbiComp) 2024! 
+									One paper on <a href="./files/NotiManager_Evaluation_IMWUT_2024" target="_blank">notification management</a> is accepted to IMWUT (UbiComp) 2024! 
 									Many thanks to my collaborators! 
 								</td>
 							</tr>
 							<tr>
 								<th scope="row" style="width: 80px;">Jun 18,<br>2024</th>
 								<td>
-									One paper on the impacts of user-assigned mobile notification alerts is accepted to MobileHCI 2024! 
+									One paper on <a href="./files/Alert_Assistance_MobileHCI_2024" target="_blank">assigning meanings to notification alerts</a> is accepted to MobileHCI 2024! 
 									Congrats to the co-authors! 
 								</td>
 							</tr>
-							<tr>
+							<!--<tr>
 								<th scope="row" style="width: 80px;">Dec 26,<br>2023</th>
 								<td>
-									<a href="./notimanager" target="_blank">Project site</a> for my research on supporting smartphone users in managing notifications is now live! 🚀 
+									<a href="./notimanager" target="_blank">Project site</a> for my research application, NotiManager, is now live! 🚀 
 								</td>
-							</tr>
+							</tr>-->
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 10,<br>2023</th>
 								<td>
-									Presented my leading project <a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management</a> as a poster at <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>. 
+									Presented my leading project <a href="./files/NotiManager_UbiComp_2023" target="_blank">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management</a> as a poster at <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>. 
 								</td>
 							</tr>
 							<tr>
@@ -143,7 +150,7 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Jan 14,<br>2023</th>
 								<td>
-									One paper on <a href="https://dl.acm.org/doi/abs/10.1145/3544548.3580731" target="_blank">cross-device notification interaction</a> is accepted to CHI 2023! 
+									One paper on <a href="./files/Multi_Device_Noti_CHI_2023" target="_blank">cross-device notification interaction</a> is accepted to CHI 2023! 
 									Enjoy working on this project, congrats to all the co-authors! 
 								</td>
 							</tr>
