--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 				<h5><span style="font-weight: 600;">Keywords:</span>
 					<a class="topic_trigger" id="topic_trigger_system_evaluation" style="cursor: pointer;"><span style="color: #035772;">user empowerment</span></a> /
 					<a class="topic_trigger" id="topic_trigger_mobile_notifications" style="cursor: pointer;"><span style="color: #035772;">mobile notifications</span></a> / 
-					<a class="topic_trigger" id="topic_trigger_experience_sampling_method" style="cursor: pointer;"><span style="color: #035772;">experience sampling</span></a> / 
-					<a class="topic_trigger" id="topic_trigger_ubiquitous_devices" style="cursor: pointer;"><span style="color: #035772;">context-aware computing</span></a> / 
+					<!--<a class="topic_trigger" id="topic_trigger_experience_sampling_method" style="cursor: pointer;"><span style="color: #035772;">experience sampling</span></a> /--> 
+					<!--<a class="topic_trigger" id="topic_trigger_ubiquitous_devices" style="cursor: pointer;"><span style="color: #035772;">context-aware computing</span></a> /--> 
 					
 					<a class="topic_trigger" id="topic_trigger_social_support" style="cursor: pointer;"><span style="color: #035772;">information consumption</span></a></h5>
 				<!--<h5>(* indicates equal contribution)</h5>-->
@@ -523,8 +523,8 @@
 						slides.item(i).style.backgroundColor = '#FAEBD7';
 					}
     				document.getElementById("topic_trigger_mobile_notifications").style.fontWeight="900";
-					document.getElementById("topic_trigger_experience_sampling_method").style.fontWeight="400";
-					document.getElementById("topic_trigger_ubiquitous_devices").style.fontWeight="400";
+					//document.getElementById("topic_trigger_experience_sampling_method").style.fontWeight="400";
+					//document.getElementById("topic_trigger_ubiquitous_devices").style.fontWeight="400";
 					document.getElementById("topic_trigger_system_evaluation").style.fontWeight="400";
 					document.getElementById("topic_trigger_social_support").style.fontWeight="400";
 					elementClicked_experience_sampling_method = false;
@@ -535,7 +535,7 @@
 				}
 			}
 
-			document.getElementById('topic_trigger_experience_sampling_method').onclick = function(){
+			/*document.getElementById('topic_trigger_experience_sampling_method').onclick = function(){
 				var tr = document.getElementsByClassName("trigger");
 				for (var i = 0; i < tr.length; i++) {
 					tr.item(i).style.backgroundColor = 'white';
@@ -565,9 +565,9 @@
 					elementClicked_social_support = false;
 					elementClicked_experience_sampling_method = true;
 				}
-			}
+			}*/
 
-			document.getElementById('topic_trigger_ubiquitous_devices').onclick = function(){
+			/*document.getElementById('topic_trigger_ubiquitous_devices').onclick = function(){
 				var tr = document.getElementsByClassName("trigger");
 				for (var i = 0; i < tr.length; i++) {
 					tr.item(i).style.backgroundColor = 'white';
@@ -587,7 +587,7 @@
 						slides.item(i).style.backgroundColor = '#FAEBD7';
 					}
 					document.getElementById("topic_trigger_mobile_notifications").style.fontWeight="400";
-					document.getElementById("topic_trigger_experience_sampling_method").style.fontWeight="400";
+					//document.getElementById("topic_trigger_experience_sampling_method").style.fontWeight="400";
 					document.getElementById("topic_trigger_ubiquitous_devices").style.fontWeight="900";
 					document.getElementById("topic_trigger_system_evaluation").style.fontWeight="400";
 					document.getElementById("topic_trigger_social_support").style.fontWeight="400";
@@ -597,7 +597,7 @@
 					elementClicked_social_support = false;
 					elementClicked_ubiquitous_devices = true;
 				}
-			}
+			}*/
 
 			document.getElementById('topic_trigger_system_evaluation').onclick = function(){
 				var tr = document.getElementsByClassName("trigger");
@@ -619,8 +619,8 @@
 						slides.item(i).style.backgroundColor = '#FAEBD7';
 					}
 					document.getElementById("topic_trigger_mobile_notifications").style.fontWeight="400";
-					document.getElementById("topic_trigger_experience_sampling_method").style.fontWeight="400";
-					document.getElementById("topic_trigger_ubiquitous_devices").style.fontWeight="400";
+					//document.getElementById("topic_trigger_experience_sampling_method").style.fontWeight="400";
+					//document.getElementById("topic_trigger_ubiquitous_devices").style.fontWeight="400";
 					document.getElementById("topic_trigger_system_evaluation").style.fontWeight="900";
 					document.getElementById("topic_trigger_social_support").style.fontWeight="400";
 					elementClicked_mobile_notifications = false;
@@ -650,8 +650,8 @@
 						slides.item(i).style.backgroundColor = '#FAEBD7';
 					}
 					document.getElementById("topic_trigger_mobile_notifications").style.fontWeight="400";
-					document.getElementById("topic_trigger_experience_sampling_method").style.fontWeight="400";
-					document.getElementById("topic_trigger_ubiquitous_devices").style.fontWeight="400";
+					//document.getElementById("topic_trigger_experience_sampling_method").style.fontWeight="400";
+					//document.getElementById("topic_trigger_ubiquitous_devices").style.fontWeight="400";
 					document.getElementById("topic_trigger_system_evaluation").style.fontWeight="400";
 					document.getElementById("topic_trigger_social_support").style.fontWeight="900";
 					elementClicked_mobile_notifications = false;
