--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<p>
 						In the past, I did my undergrad in computer science at the <img class="logo" src="images/nycu_logo.png"><a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University). 
 						I was fortunate to have two remote research internship experiences during my undergrad. One was in the UC Davis Collaborative and Social Computing Lab, where I worked on supporting the peer review process using chatbots. 
-						The other was in the Polytechnique Montréal Human-Centered Design Lab, where I investigated the use of visual artifacts in open-source software issue threads
+						The other was in the <img class="logo" style="width:20px; height:20px; vertical-align: sub; margin: 0 0 0 3px;" src="images/hcd_lab_logo.png"> Polytechnique Montréal Human-Centered Design Lab, where I investigated the use of visual artifacts in open-source software issue threads
 							 
 					</p>
 					<p>	
@@ -112,14 +112,14 @@
 								<th scope="row" style="width: 80px;">Oct 8,<br>2024</th>
 								<td>
 									Attended <a href="https://www.ubicomp.org/ubicomp-iswc-2024/" target="_blank">UbiComp/ISWC 2024</a> to present paper <a href="./files/NotiManager_Evaluation_IMWUT_2024" target="_blank">Pinning, Sorting, and Categorizing Notifications: A Mixed-methods Usage and Experience Study of Mobile Notification-management Features</a>!
-									Explore the <a href="./notimanager" target="_blank">project site</a> for an overview of NotiManager, the application developed for this research!
+									Explore the <a href="./notimanager" target="_blank">project site</a> for an overview of our research and NotiManager, the application developed for this research!
 								</td>
 							</tr>
 							<tr>
 								<th scope="row" style="width: 80px;">Jul 2,<br>2024</th>
 								<td>
 									One paper on <a href="./files/NotiManager_Evaluation_IMWUT_2024" target="_blank">notification management</a> is accepted to IMWUT (UbiComp) 2024! 
-									Many thanks to my collaborators! 
+									Many thanks to my collaborators! 🎉
 								</td>
 							</tr>
 							<tr>
@@ -214,14 +214,14 @@
 								<span style="font-weight: 600;color: #035772;"><i class="fas fa-file-image" style="padding:0 4px 0 10px;font-size:17px;vertical-align: middle;"></i></span>
 								<a href="files/NotiManager_UbiComp_2023_Poster.pdf" target="_blank">Poster</a> 
 							</div></li>
-							<li><div class="trigger mobile_notifications ubiquitous_devices system_evaluation trigger social_support" id="notimanager" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
+							<!--<li><div class="trigger mobile_notifications ubiquitous_devices system_evaluation trigger social_support" id="notimanager" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
 								 <br>
 								<u>Yong-Han Lin</u>*, Yin-Hsuan Liao*, Chia-Yu Huang*, Yu-Wei Yang, Hsin-Chien Tung, Chieh Hsu, Yung-Ju Chang &nbsp;&nbsp;(*co-first authorship)
 								<br>In<em> Proceedings of the 2021 Taiwanese Conference of Computer Human Interaction</em> (TAICHI '21) 
 								<br>
 								<span style="font-weight: 600;color: #035772;"><i class="fas fa-caret-square-down" style="padding:0 4px 0 0;font-size:17px;vertical-align: middle;"></i></span><a class="abs_trigger" id="abs_notimanager" style="cursor: pointer;">Abstract</a>
 								<span style="font-weight: 600;color: #035772;"><i class="fas fa-file-alt" style="padding:0 4px 0 10px;font-size:17px;vertical-align: middle;"></i></span><a href="files/NotiManager_TAICHI_2021.pdf" target="_blank">PDF</a> 
-							</div></li>
+							</div></li>-->
 						</ul>
 					</div>
 
@@ -232,12 +232,14 @@
 						<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices system_evaluation social_support" id="noti_alert" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">"I Want Lower Tone for Work-Related Notifications": Exploring the Effectiveness of User-Assigned Notification Alerts in Improving User Speculation of and Attendance to Mobile Notifications </span> 
 							
 							<br>Tang-Jie Chang, Li-Ting Su, <u>Yong-Han Lin</u>, Jie Tsai, Zi-Xun Tang, Yung-Ju Chang 
-							<br><em></em>To Appear at 2024 MobileHCI
+							<br>In<em> Proceedings of the ACM on Human-Computer Interaction</em> (MobileHCI '24)
 							<br>
 							<span style="font-weight: 600;color: #035772;"><i class="fas fa-caret-square-down" style="padding:0 4px 0 0;font-size:17px;vertical-align: middle;"></i></span>
 							<a class="abs_trigger" id="abs_noti_alert" style="cursor: pointer;">Abstract</a>
 							<span style="font-weight: 600;color: #035772;"><i class="fas fa-file-alt" style="padding:0 4px 0 10px;font-size:17px;vertical-align: middle;"></i></span>
 							<a href="files/Alert_Assistance_MobileHCI_2024.pdf" target="_blank">PDF</a>
+							<span style="font-weight: 600;color: #035772;"><i class="ai ai-acmdl-square" style="padding:0 4px 0 10px;font-size:19px;vertical-align: middle;"></i></span>
+							<a href="https://dl.acm.org/doi/abs/10.1145/3676512" target="_blank">ACM DL</a> 
 						</div></li>
 						<li><div class="trigger mobile_notifications experience_sampling_method ubiquitous_devices" id="multi_device" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">Multiple Device Users' Actual and Ideal Cross-Device Usage for Multi-Stage Notification-Interactions: An ESM Study Addressing the Usage Gap and Impacts of Device Context </span> 
 							<br>Fang-Ching Tseng, ​Zih-Yun Chiou, Ho-Hsuan Chuang,  Li-Ting Su, <u>Yong-Han Lin</u>, Yu-Rou Lin, Yi-Chi Lee, Peng-Jui Wang, Uei-Dar Chen, Yung-Ju Chang 
