--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<li><a title="Google Scholar" href="https://scholar.google.com.tw/citations?user=zrsqlLUAAAAJ&hl=zh-TW&authuser=2" target="_blank" class="icon brands"><i class="ai ai-google-scholar ai-lg"></i></a></li>
 						<!--<li><a title="Github" href="https://github.com/yonghanlin" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>-->
 						<!--<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
-						<!--<li><a title="CV" href="files/YongHan_Lin_CV.pdf" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>-->
+						<li><a title="CV" href="files/YongHan_Lin_CV.pdf" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
 					</ul>
 				</div>
 			</div>
