--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
 							 
 					</p>
 					<p>	
-						If you find anything interesting on my website, welcome to reach out to me by email! 
-						I am always happy to connect, chat, and collaborate with others. 					
+						<div style="color:red;">📢 I'm looking for a Ph.D. position starting in 2025 Fall! 
+						 If you know of any opportunities that might be a good fit, please send me an email. 
+						 I'm happy to connect, chat, and collaborate with others.</div>
 					</p>
 					<p>					
-						<i class="fas fa-envelope" style="padding:0 10px 0 0;color: #035772;vertical-align: middle;"></i><a href="mailto:yon9hanlin@gmail.com" target="_blank">yon9hanlin [at] gmail [dot] com </a>
+						<i class="fas fa-envelope" style="padding:0 10px 0 0;color: #035772;vertical-align: middle;"> Email:</i><a href="mailto:yon9hanlin@gmail.com" target="_blank">yon9hanlin [at] gmail [dot] com </a>
 						<!--<i class="fab fa-twitter" style="padding:0 10px 0 0;color: #035772;vertical-align: middle;"></i><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" >@yoonghaan</a>-->	
 					</p>					
 				</header>
