--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
 								</td>
 							</tr>
 							<tr>
+								<th scope="row" style="width: 80px;">Oct 2,<br>2024</th>
+								<td>
+									Had a wonderful experience at <a href="https://mobilehci.acm.org/2024/index.php" target="_blank">MobileHCI 2024</a> presenting <a href="./files/Alert_Assistance_MobileHCI_2024" target="_blank">"I Want Lower Tone for Work-Related Notifications": Exploring the Effectiveness of User-Assigned Notification Alerts in Improving User Speculation of and Attendance to Mobile Notifications</a>!
+								</td>
+							</tr>
+							<tr>
 								<th scope="row" style="width: 80px;">Jul 2,<br>2024</th>
 								<td>
 									One paper on <a href="./files/NotiManager_Evaluation_IMWUT_2024" target="_blank">notification management</a> is accepted to IMWUT (UbiComp) 2024! 
