--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 					</p>
 					<p>	
 						<div style="color:red;">📢 I'm looking for a Ph.D. position starting in 2025 Fall! 
-						 If you know of any opportunities that might be a good fit, please send me an email. 
-						 I'm happy to connect, chat, and collaborate with others.</div>
+						 If you know of any opportunities that might be a good fit, please talk to me at UbiComp/ISWC 2024 (in Melbourne) or send me an email. 
+						 I'm always happy to connect, chat, and collaborate with others.</div>
 					</p>
 					<p>					
 						<i class="fas fa-envelope" style="padding:0 10px 0 0;color: #035772;vertical-align: middle;"> Email:</i><a href="mailto:yon9hanlin@gmail.com" target="_blank">yon9hanlin [at] gmail [dot] com </a>
